--- a/ProjetBDD/ProjetBDD/Connection.xaml
+++ b/ProjetBDD/ProjetBDD/Connection.xaml
@@ -15,7 +15,7 @@
             <PasswordBox x:Name="passewordBox" FontSize="24"/>
             <Grid Margin="0,10" Height="43">
                 <Button Content="S'en foutre" Margin="1" Click="Button_Click"/>
-                <Button Content="S'inscrire" Grid.Column="1" Margin="1" Click="Button_Click_1"/>
+                <Button Content="S'inscrire ou pas" Grid.Column="1" Margin="1" Click="Button_Click_1"/>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
