--- a/ProjetBDD/ProjetBDD/Connection.xaml
+++ b/ProjetBDD/ProjetBDD/Connection.xaml
@@ -10,7 +10,7 @@
         <Frame x:Name="main" />
         <StackPanel Margin="60">
             <Label Foreground="White" Content="Identifiant :" FontSize="16" />
-            <TextBox Height="35" TextWrapping="Wrap" FontSize="24" Margin="0,10"/>
+            <TextBox x:Name="IDBox" Height="35" TextWrapping="Wrap" FontSize="24" Margin="0,10"/>
             <Label Foreground="White" Content="Mot de Passe :" FontSize="16" />
             <PasswordBox x:Name="passewordBox" FontSize="24"/>
             <Grid Margin="0,10" Height="43">
